<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".Earth">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/titleEarth"
            android:layout_width="250dp"
            android:layout_height="48dp"
            android:fontFamily="sans-serif-condensed"
            android:text="@string/titleEarth"
            android:textAlignment="center"
            android:textColor="#1C1717"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textStyle="bold|italic" />

        <EditText
            android:id="@+id/editLat"
            android:layout_width="293dp"
            android:layout_height="45dp"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:background="@drawable/custom_input"
            android:ems="10"
            android:hint="@string/txtLat"
            android:importantForAutofill="no"
            android:inputType="textPersonName"
            android:paddingStart="15dp"
            android:textAlignment="textStart"
            tools:ignore="RtlCompat,RtlSymmetry" />

        <TextView
            android:id="@+id/txtLocal"
            android:layout_width="289dp"
            android:layout_height="49dp"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt"
            android:textAlignment="center"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textSize="18sp" />

        <TextView
            android:id="@+id/txt1"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-condensed-light"
            android:onClick="selectDate"
            android:text="@string/txt1"
            android:textSize="30sp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:textStyle="bold" />

        <Button
            android:id="@+id/btnEarth"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button"
            android:backgroundTint="#171515"
            android:onClick="buscarImage"
            android:text="@string/btn1"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textColor="#E4DEDE" />

        <Button
            android:id="@+id/btnExit"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button"
            android:onClick="Back"
            android:text="@string/btnBack"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:textColor="#FFFFFF" />
    </LinearLayout>

</ScrollView>