<?xml version="1.0" encoding="utf-8"?>
<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NasaPic">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/txtLocal"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:fontFamily="sans-serif-black"
            android:text="@string/txt2"
            android:layout_gravity="center"
            android:layout_marginTop="70dp"
            android:textSize="18sp" />

        <ImageView
            android:id="@+id/ivNasa"
            android:layout_width="343dp"
            android:layout_height="208dp"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:contentDescription="@string/ivNasa"
            app:srcCompat="@drawable/carregando" />

        <Button
            android:id="@+id/btn2"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button"
            android:onClick="share"
            android:text="@string/btn2"
            android:layout_gravity="center"
            android:layout_marginTop="100dp"
            android:textColor="#FFFFFF" />

        <Button
            android:id="@+id/btnBack"
            android:layout_width="236dp"
            android:layout_height="46dp"
            android:background="@drawable/custom_button"
            android:onClick="back"
            android:text="@string/btnBack"
            android:layout_gravity="center"
            android:layout_marginTop="40dp"
            android:layout_marginBottom="40dp"
            android:textColor="#FFFFFF" />

    </LinearLayout>

</ScrollView>